repackaging and rework

--- a/_solutions/2022-09-12.md
+++ b/_solutions/2022-09-12.md
@@ -1,3 +1,8 @@
+---
+layout: solution
+title: Wordle for September 12, 2022
+date: 2022-09-12
+---
 # Wordle for September 12, 2022
 
 ## Attempt 1
@@ -18,7 +23,7 @@ At position 5: `[a b c d e f g h i j k l m n o p q r s t u v w x y z]`
 
 Trying word `trend`
 
-![Attempt 1](attempt-1.png)
+![Attempt 1](2022-09-12/attempt-1.png)
 
 Analyzing results for word `trend`
 
@@ -52,7 +57,7 @@ At position 5: `[a b c e f g h i j k l m o p q s u v w x y z]`
 
 Trying word `helio`
 
-![Attempt 2](attempt-2.png)
+![Attempt 2](2022-09-12/attempt-2.png)
 
 Analyzing results for word `helio`
 
@@ -86,7 +91,7 @@ At position 5: `[a b c e f g j k m p q s u v w x y z]`
 
 Trying word `youse`
 
-![Attempt 3](attempt-3.png)
+![Attempt 3](2022-09-12/attempt-3.png)
 
 Analyzing results for word `youse`
 
@@ -120,7 +125,7 @@ At position 5: `[e]`
 
 Trying word `pombe`
 
-![Attempt 4](attempt-4.png)
+![Attempt 4](2022-09-12/attempt-4.png)
 
 Analyzing results for word `pombe`
 
@@ -152,7 +157,7 @@ At position 5: `[e]`
 
 Trying word `bocce`
 
-![Attempt 5](attempt-5.png)
+![Attempt 5](2022-09-12/attempt-5.png)
 
 Analyzing results for word `bocce`
 
@@ -184,7 +189,7 @@ At position 5: `[e]`
 
 Trying word `booze`
 
-![Attempt 6](attempt-6.png)
+![Attempt 6](2022-09-12/attempt-6.png)
 
 Analyzing results for word `booze`
 
