--- a/_solutions/2022-09-13.md
+++ b/_solutions/2022-09-13.md
@@ -1,3 +1,8 @@
+---
+layout: solution
+title: Wordle for September 13, 2022
+date: 2022-09-13
+---
 # Wordle for September 13, 2022
 
 ## Attempt 1
@@ -18,7 +23,7 @@ At position 5: `[a b c d e f g h i j k l m n o p q r s t u v w x y z]`
 
 Trying word `trend`
 
-![Attempt 1](attempt-1.png)
+![Attempt 1](2022-09-13/attempt-1.png)
 
 Analyzing results for word `trend`
 
@@ -52,7 +57,7 @@ At position 5: `[a b c f g h i j k l m o p q s u v w x y z]`
 
 Trying word `choil`
 
-![Attempt 2](attempt-2.png)
+![Attempt 2](2022-09-13/attempt-2.png)
 
 Analyzing results for word `choil`
 
@@ -86,7 +91,7 @@ At position 5: `[a b f g h j k m p q s u v w x y z]`
 
 Trying word `lushy`
 
-![Attempt 3](attempt-3.png)
+![Attempt 3](2022-09-13/attempt-3.png)
 
 Analyzing results for word `lushy`
 
@@ -122,7 +127,7 @@ At position 5: `[a b f g h j k m p q v w x z]`
 
 Trying word `alpha`
 
-![Attempt 4](attempt-4.png)
+![Attempt 4](2022-09-13/attempt-4.png)
 
 Analyzing results for word `alpha`
 
