--- a/_solutions/2022-09-14.md
+++ b/_solutions/2022-09-14.md
@@ -1,3 +1,8 @@
+---
+layout: solution
+title: Wordle for September 14, 2022
+date: 2022-09-14
+---
 # Wordle for September 14, 2022
 
 ## Attempt 1
@@ -18,7 +23,7 @@ At position 5: `[a b c d e f g h i j k l m n o p q r s t u v w x y z]`
 
 Let's start with word `drant`
 
-![Attempt 1](attempt-1.png)
+![Attempt 1](2022-09-14/attempt-1.png)
 
 Analyzing results for word `drant`
 
@@ -54,7 +59,7 @@ At position 5: `[a b c d e f g h i j k l m n o p q r s u v w x y z]`
 
 Next guess is `tutti`, that seems to be the best candidate so far
 
-![Attempt 2](attempt-2.png)
+![Attempt 2](2022-09-14/attempt-2.png)
 
 Analyzing results for word `tutti`
 
@@ -92,7 +97,7 @@ At position 5: `[a b c d e f g h i j k l m n o p q r s v w x y z]`
 
 Next guess is `totty`, that seems to be the best candidate so far
 
-![Attempt 3](attempt-3.png)
+![Attempt 3](2022-09-14/attempt-3.png)
 
 Analyzing results for word `totty`
 
@@ -186,7 +191,7 @@ At position 5: `[a b c d e f g h i j k l m n o p q r s v w x z]`
 
 Next guess is `toyer`, that seems to be the best candidate so far
 
-![Attempt 4](attempt-4.png)
+![Attempt 4](2022-09-14/attempt-4.png)
 
 Analyzing results for word `toyer`
 
@@ -224,7 +229,7 @@ At position 5: `[a b c d e f g h i j k l m n p q r s v w x z]`
 
 Next guess is `thyme`, that seems to be the best candidate so far
 
-![Attempt 5](attempt-5.png)
+![Attempt 5](2022-09-14/attempt-5.png)
 
 That's the correct answer! The word is `thyme`!
 
