--- a/_solutions/2022-09-12.md
+++ b/_solutions/2022-09-12.md
@@ -2,6 +2,9 @@
 layout: solution
 title: Wordle for September 12, 2022
 date: 2022-09-12
+solved: true
+attempts: 6
+video_link: https://youtu.be/_Lx9SA400IY
 ---
 # Wordle for September 12, 2022
 
