--- a/_solutions/2022-09-13.md
+++ b/_solutions/2022-09-13.md
@@ -2,6 +2,9 @@
 layout: solution
 title: Wordle for September 13, 2022
 date: 2022-09-13
+solved: true
+attempts: 4
+video_link: https://youtu.be/QUiRFU6ymoQ
 ---
 # Wordle for September 13, 2022
 
