--- a/_solutions/2022-09-14.md
+++ b/_solutions/2022-09-14.md
@@ -2,6 +2,9 @@
 layout: solution
 title: Wordle for September 14, 2022
 date: 2022-09-14
+solved: true
+attempts: 5
+video_link: https://youtu.be/J_KdmPMPQIs
 ---
 # Wordle for September 14, 2022
 
