--- a/_solutions/2022-09-15.md
+++ b/_solutions/2022-09-15.md
@@ -2,6 +2,9 @@
 layout: solution
 title: Wordle for September 15, 2022
 date: 2022-09-15
+solved: true
+attempts: 4
+video_link: https://youtu.be/tcNLwNb6BF4
 ---
 
 # Wordle for September 15, 2022
