Upload new daily solution

--- a/_solutions/2022-09-19.md
+++ b/_solutions/2022-09-19.md
@@ -4,7 +4,7 @@ title: Wordle for September 19, 2022
 date: 2022-09-19
 solved: true
 attempts: 4
-video_link: https://youtu.be/lgY2jmG3uJI
+video_link: https://youtu.be/Qd9BwsEyq3M
 ---
 
 # Wordle for September 19, 2022
