Upload new daily solution

--- a/_solutions/2022-09-21.md
+++ b/_solutions/2022-09-21.md
@@ -4,7 +4,7 @@ title: Wordle for September 21, 2022
 date: 2022-09-21
 solved: true
 attempts: 5
-video_link: https://youtu.be/45msV41FeU8
+video_link: https://youtu.be/wzVRTEyVgBY
 ---
 
 # Wordle for September 21, 2022
