Upload new daily solution

--- a/_solutions/2022-09-23.md
+++ b/_solutions/2022-09-23.md
@@ -4,7 +4,7 @@ title: Wordle for September 23, 2022
 date: 2022-09-23
 solved: true
 attempts: 4
-video_link: https://youtu.be/uks43y9kQAg
+video_link: https://youtu.be/2AgLAGxXfD0
 ---
 
 # Wordle for September 23, 2022
