--- a/_solutions/2022-09-12.md
+++ b/_solutions/2022-09-12.md
@@ -1,12 +1,13 @@
 ---
 layout: solution
-title: Wordle for September 12, 2022
+title: Wordle for September 12, 2022 - \#450
 date: 2022-09-12
 solved: true
 attempts: 6
 video_link: https://youtu.be/_Lx9SA400IY
+wordle_id: 450
 ---
-# Wordle for September 12, 2022
+# Wordle for September 12, 2022 - \#450
 
 ## Attempt 1
 
