--- a/_solutions/2022-09-13.md
+++ b/_solutions/2022-09-13.md
@@ -1,12 +1,13 @@
 ---
 layout: solution
-title: Wordle for September 13, 2022
+title: Wordle for September 13, 2022 - \#451
 date: 2022-09-13
 solved: true
 attempts: 4
 video_link: https://youtu.be/QUiRFU6ymoQ
+wordle_id: 451
 ---
-# Wordle for September 13, 2022
+# Wordle for September 13, 2022 - \#451
 
 ## Attempt 1
 
