--- a/_solutions/2022-09-14.md
+++ b/_solutions/2022-09-14.md
@@ -1,12 +1,13 @@
 ---
 layout: solution
-title: Wordle for September 14, 2022
+title: Wordle for September 14, 2022 - \#452
 date: 2022-09-14
 solved: true
 attempts: 5
 video_link: https://youtu.be/J_KdmPMPQIs
+wordle_id: 452
 ---
-# Wordle for September 14, 2022
+# Wordle for September 14, 2022 - \#452
 
 ## Attempt 1
 
