--- a/_solutions/2022-09-15.md
+++ b/_solutions/2022-09-15.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 15, 2022
+title: Wordle for September 15, 2022 - \#453
 date: 2022-09-15
 solved: true
 attempts: 4
 video_link: https://youtu.be/tcNLwNb6BF4
+wordle_id: 453
 ---
 
-# Wordle for September 15, 2022
+# Wordle for September 15, 2022 - \#453
 
 ## Attempt 1
 
