--- a/_solutions/2022-09-16.md
+++ b/_solutions/2022-09-16.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 16, 2022
+title: Wordle for September 16, 2022 - \#454
 date: 2022-09-16
 solved: false
 attempts: 7
 video_link: https://youtu.be/hXgj9FlAqI0
+wordle_id: 454
 ---
 
-# Wordle for September 16, 2022
+# Wordle for September 16, 2022 - \#454
 
 ## Attempt 1
 
