--- a/_solutions/2022-09-17.md
+++ b/_solutions/2022-09-17.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 17, 2022
+title: Wordle for September 17, 2022 - \#455
 date: 2022-09-17
 solved: true
 attempts: 4
 video_link: https://youtu.be/LSyKzKrKEfc
+wordle_id: 455
 ---
 
-# Wordle for September 17, 2022
+# Wordle for September 17, 2022 - \#455
 
 ## Attempt 1
 
