--- a/_solutions/2022-09-18.md
+++ b/_solutions/2022-09-18.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 18, 2022
+title: Wordle for September 18, 2022 - \#456
 date: 2022-09-18
 solved: true
 attempts: 4
 video_link: https://youtu.be/Ja-HFoL475s
+wordle_id: 456
 ---
 
-# Wordle for September 18, 2022
+# Wordle for September 18, 2022 - \#456
 
 ## Attempt 1
 
