--- a/_solutions/2022-09-19.md
+++ b/_solutions/2022-09-19.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 19, 2022
+title: Wordle for September 19, 2022 - \#457
 date: 2022-09-19
 solved: true
 attempts: 4
 video_link: https://youtu.be/lgY2jmG3uJI
+wordle_id: 457
 ---
 
-# Wordle for September 19, 2022
+# Wordle for September 19, 2022 - \#457
 
 ## Attempt 1
 
