--- a/_solutions/2022-09-21.md
+++ b/_solutions/2022-09-21.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 21, 2022
+title: Wordle for September 21, 2022 - \#459
 date: 2022-09-21
 solved: true
 attempts: 5
 video_link: https://youtu.be/wzVRTEyVgBY
+wordle_id: 459
 ---
 
-# Wordle for September 21, 2022
+# Wordle for September 21, 2022 - \#459
 
 ## Attempt 1
 
