--- a/_solutions/2022-09-22.md
+++ b/_solutions/2022-09-22.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 22, 2022
+title: Wordle for September 22, 2022 - \#460
 date: 2022-09-22
 solved: true
 attempts: 3
 video_link: https://youtu.be/OXjJFMCCU-Y
+wordle_id: 460
 ---
 
-# Wordle for September 22, 2022
+# Wordle for September 22, 2022 - \#460
 
 ## Attempt 1
 
