--- a/_solutions/2022-09-23.md
+++ b/_solutions/2022-09-23.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 23, 2022
+title: Wordle for September 23, 2022 - \#461
 date: 2022-09-23
 solved: true
 attempts: 4
 video_link: https://youtu.be/2AgLAGxXfD0
+wordle_id: 461
 ---
 
-# Wordle for September 23, 2022
+# Wordle for September 23, 2022 - \#461
 
 ## Attempt 1
 
