--- a/_solutions/2022-09-24.md
+++ b/_solutions/2022-09-24.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 24, 2022
+title: Wordle for September 24, 2022 - \#462
 date: 2022-09-24
 solved: false
 attempts: 7
 video_link: https://youtu.be/e_6SutI616A
+wordle_id: 462
 ---
 
-# Wordle for September 24, 2022
+# Wordle for September 24, 2022 - \#462
 
 ## Attempt 1
 
