--- a/_solutions/2022-09-25.md
+++ b/_solutions/2022-09-25.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 25, 2022
+title: Wordle for September 25, 2022 - \#463
 date: 2022-09-25
 solved: true
 attempts: 4
 video_link: https://youtu.be/zPgnszkv8cA
+wordle_id: 463
 ---
 
-# Wordle for September 25, 2022
+# Wordle for September 25, 2022 - \#463
 
 ## Attempt 1
 
