--- a/_solutions/2022-09-27.md
+++ b/_solutions/2022-09-27.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 27, 2022
+title: Wordle for September 27, 2022 - \#465
 date: 2022-09-27
 solved: true
 attempts: 6
 video_link: https://youtu.be/eppGXDU0Qg0
+wordle_id: 465
 ---
 
-# Wordle for September 27, 2022
+# Wordle for September 27, 2022 - \#465
 
 ## Attempt 1
 
