--- a/_solutions/2022-09-28.md
+++ b/_solutions/2022-09-28.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 28, 2022
+title: Wordle for September 28, 2022 - \#466
 date: 2022-09-28
 solved: true
 attempts: 5
 video_link: https://youtu.be/riwkGvAyAzs
+wordle_id: 466
 ---
 
-# Wordle for September 28, 2022
+# Wordle for September 28, 2022 - \#466
 
 ## Attempt 1
 
