--- a/_solutions/2022-09-29.md
+++ b/_solutions/2022-09-29.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 29, 2022
+title: Wordle for September 29, 2022 - \#467
 date: 2022-09-29
 solved: true
 attempts: 4
 video_link: https://youtu.be/yHSuS0x9hQk
+wordle_id: 467
 ---
 
-# Wordle for September 29, 2022
+# Wordle for September 29, 2022 - \#467
 
 ## Attempt 1
 
