--- a/_solutions/2022-10-01.md
+++ b/_solutions/2022-10-01.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for October 1, 2022
+title: Wordle for October 1, 2022 - \#469
 date: 2022-10-01
 solved: true
 attempts: 4
 video_link: https://youtu.be/Y_m_a5WnJ9E
+wordle_id: 469
 ---
 
-# Wordle for October 1, 2022
+# Wordle for October 1, 2022 - \#469
 
 ## Attempt 1
 
