--- a/_solutions/2022-10-02.md
+++ b/_solutions/2022-10-02.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for October 2, 2022
+title: Wordle for October 2, 2022 - \#470
 date: 2022-10-02
 solved: true
 attempts: 3
 video_link: https://youtu.be/9AyGbYQbQxE
+wordle_id: 470
 ---
 
-# Wordle for October 2, 2022
+# Wordle for October 2, 2022 - \#470
 
 ## Attempt 1
 
