--- a/_solutions/2022-10-03.md
+++ b/_solutions/2022-10-03.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for October 3, 2022
+title: Wordle for October 3, 2022 - \#471
 date: 2022-10-03
 solved: true
 attempts: 4
 video_link: https://youtu.be/Nh8kJPz6KT0
+wordle_id: 471
 ---
 
-# Wordle for October 3, 2022
+# Wordle for October 3, 2022 - \#471
 
 ## Attempt 1
 
