--- a/_solutions/2022-10-05.md
+++ b/_solutions/2022-10-05.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for October 5, 2022
+title: Wordle for October 5, 2022 - \#473
 date: 2022-10-05
 solved: true
 attempts: 4
 video_link: https://youtu.be/LBdbUB9Xj-U
+wordle_id: 473
 ---
 
-# Wordle for October 5, 2022
+# Wordle for October 5, 2022 - \#473
 
 ## Attempt 1
 
