--- a/_solutions/2022-10-06.md
+++ b/_solutions/2022-10-06.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for October 6, 2022
+title: Wordle for October 6, 2022 - \#474
 date: 2022-10-06
 solved: true
 attempts: 3
 video_link: https://youtu.be/-VE2RG8Wdyg
+wordle_id: 474
 ---
 
-# Wordle for October 6, 2022
+# Wordle for October 6, 2022 - \#474
 
 ## Attempt 1
 
