--- a/_solutions/2022-10-07.md
+++ b/_solutions/2022-10-07.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for October 7, 2022
+title: Wordle for October 7, 2022 - \#475
 date: 2022-10-07
 solved: true
 attempts: 4
 video_link: https://youtu.be/e8F5soGEUIA
+wordle_id: 475
 ---
 
-# Wordle for October 7, 2022
+# Wordle for October 7, 2022 - \#475
 
 ## Attempt 1
 
