--- a/_solutions/2022-10-08.md
+++ b/_solutions/2022-10-08.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for October 8, 2022
+title: Wordle for October 8, 2022 - \#476
 date: 2022-10-08
 solved: true
 attempts: 5
 video_link: https://youtu.be/dFjCGE_BBnw
+wordle_id: 476
 ---
 
-# Wordle for October 8, 2022
+# Wordle for October 8, 2022 - \#476
 
 ## Attempt 1
 
