--- a/_solutions/2022-09-11.md
+++ b/_solutions/2022-09-11.md
@@ -1,11 +1,12 @@
 ---
 layout: solution
-title: Wordle for September 11, 2022
+title: Wordle for September 11, 2022 - \#449
 date: 2022-09-11
 solved: true
 attempts: 5
 video_link: https://youtu.be/3ucmlvau51U
+wordle_id: 449
 ---
-# Wordle for September 11, 2022
+# Wordle for September 11, 2022 - \#449
 
 No breakdown available.
