--- a/_solutions/2022-09-20.md
+++ b/_solutions/2022-09-20.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 20, 2022
+title: Wordle for September 20, 2022 - \#458
 date: 2022-09-20
 solved: true
 attempts: 4
 video_link: https://youtu.be/7yrp3e1eA7E
+wordle_id: 458
 ---
 
-# Wordle for September 20, 2022
+# Wordle for September 20, 2022 - \#458
 
 ## Attempt 1
 
