--- a/_solutions/2022-09-26.md
+++ b/_solutions/2022-09-26.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 26, 2022
+title: Wordle for September 26, 2022 - \#464
 date: 2022-09-26
 solved: true
 attempts: 4
 video_link: https://youtu.be/I7Op_dfueQc
+wordle_id: 464
 ---
 
-# Wordle for September 26, 2022
+# Wordle for September 26, 2022 - \#464
 
 ## Attempt 1
 
