--- a/_solutions/2022-09-30.md
+++ b/_solutions/2022-09-30.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for September 30, 2022
+title: Wordle for September 30, 2022 - \#468
 date: 2022-09-30
 solved: true
 attempts: 4
 video_link: https://youtu.be/6Wxay0sWhVM
+wordle_id: 468
 ---
 
-# Wordle for September 30, 2022
+# Wordle for September 30, 2022 - \#468
 
 ## Attempt 1
 
