--- a/_solutions/2022-10-04.md
+++ b/_solutions/2022-10-04.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for October 4, 2022
+title: Wordle for October 4, 2022 - \#472
 date: 2022-10-04
 solved: true
 attempts: 3
 video_link: https://youtu.be/oJrinGtsfDI
+wordle_id: 472
 ---
 
-# Wordle for October 4, 2022
+# Wordle for October 4, 2022 - \#472
 
 ## Attempt 1
 
