--- a/_solutions/2022-10-09.md
+++ b/_solutions/2022-10-09.md
@@ -1,13 +1,14 @@
 ---
 layout: solution
-title: Wordle for October 9, 2022
+title: Wordle for October 9, 2022 - \#477
 date: 2022-10-09
 solved: true
 attempts: 4
 video_link: https://youtu.be/SYUOAcGCOpQ
+wordle_id: 477
 ---
 
-# Wordle for October 9, 2022
+# Wordle for October 9, 2022 - \#477
 
 ## Attempt 1
 
